# scrapwood-tetris

./: .gitignore  ATTRIBUTION.md  CITATION.cff  PROVENANCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
baselines/: seeded_waste.json
fixtures/boards/: knotty_board.json
fixtures/parts/: human_script.json
scripts/: ci-local.sh  run.sh
src/scrapwood/: __init__.py  __main__.py  agent.py  cli.py  constraints.py  contest.py  env.py  geometry.py  load.py  models.py  placer.py  scoring.py
src/scrapwood/data/: catalog.json  human_script.json  knotty_board.json  seeded_waste.json
tests/: test_constraints.py  test_contest.py  test_env.py  test_malformed.py  test_placer.py  test_property.py  test_scoring.py
