[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapwood-tetris"
version = "0.1.0"
description = "Defect-aware scrapwood packing contest: human / solver / agent on waste%"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Takeru Kondo" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100",
]

[project.scripts]
scrapwood = "scrapwood.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
